menu alignment fix, shrinking logo invis box. commenting out bootstrap container overrides

--- a/wp-content/themes/bensTheme/assets/styles/common/_global.less
+++ b/wp-content/themes/bensTheme/assets/styles/common/_global.less
@@ -5,7 +5,7 @@
 
 @media (min-width: 768px)
 {
-.container {width:968px !important;}
+//.container {width:968px !important;}
 }
 .homeCenter {
     width:800px !important;
@@ -253,6 +253,7 @@ CSSTableGenerator {
 #sm-logo {
    // margin-top:-1px;
     float:left;
+    width:30px;
 }
 
 .clippingContainer {
